[metadata]
name = django-consent-temp
version = 0.9
description = Manages consent for communication with GDPR in mind
long_description = file: README.rst
url = https://github.com/django-denmark/django_consent
author = Benjamin Balder Bach
author_email = benjamin@overtag.dk
license = GNU General Public License v3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2
    Framework :: Django :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    django>=2.2,<4

[options.package_data]
* = *.html

[options.extras_require]
test = pytest; pytest-django
develop = tox; coverage; pytest; pre-commit

[options.packages.find]
where =
    src

[flake8]
ignore = E501 W503
max-line-length = 160
max-complexity = 10
exclude = */*migrations

[aliases]
# Define setup.py command aliases here
test = pytest
